hopefully fix spacing again

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,4 +31,7 @@
         padding: 10px;
         white-space: nowrap;  // Prevents wrapping in the header
     }
+    div {
+        padding: 10px;
+    }
 }
